Refactor ExercicioIntegrationTest for database usage